--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -7,8 +7,7 @@ jobs:
     - uses: kurocha/setup-cpp@v1
     - name: Pack
       run: |
-       cd ${{ github.workspace }} && make xl && make xlang
-       cd ${{ github.workspace }} && tar -cvf build-linux.zip ./xl ./vm/vm 
+       ls ${{ github.workspace }}
     - uses: actions/upload-artifact@v2
       with:
         name: Upload
