--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -12,4 +12,4 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: build-linux
-        path: ${{ github.workspace }}/Xlang/build/*
+        path: ${{ github.workspace }}/Xlang/railgun/build/*
