--- a/railgun/Makefile.WinPlatform
+++ b/railgun/Makefile.WinPlatform
@@ -8,8 +8,8 @@ Xlang: tests/ast_test.cpp include/*
 	$(CXX) tests/ast_test.cpp $(CXXFLAG) -o tests/xlang
 
 install: Xasm Xlang
-	mv xasm/tests/xasm build/
-	mv tests/xlang build/
+	mv xasm/tests/xasm.exe build/
+	mv tests/xlang.exe build/
 
 clean: 
 	rm -rf ./build/*
