--- a/railgun/Makefile.WinPlatform
+++ b/railgun/Makefile.WinPlatform
@@ -1,19 +1,19 @@
 CXX := i686-w64-mingw32-g++
 CXXFLAG := -g --static
 
-Xasm: xasm/tests/xasm_test.cpp xasm/include/*
+__xasm: xasm/tests/xasm_test.cpp xasm/include/*
 	$(CXX) xasm/tests/xasm_test.cpp $(CXXFLAG) -o xasm/tests/xasm
 
-Xlang: tests/ast_test.cpp include/*
+__xlang: tests/ast_test.cpp include/*
 	$(CXX) tests/ast_test.cpp $(CXXFLAG) -o tests/xlang
 
-Xmvefdump: xmvefdump/objdump.cpp xasm/include/*
+__xmvefdump: xmvefdump/objdump.cpp xasm/include/*
 	$(CXX) xmvefdump/objdump.cpp $(CXXFLAG) -o xmvefdump/objdump
 
-install: clean Xasm Xlang Xmvefdump
+install: clean __xasm __xlang __xmvefdump
 	mv xasm/tests/xasm.exe build/
 	mv tests/xlang.exe build/
 	mv xmvefdump/objdump.exe build/
 
 clean: 
-	rm -rf ./build/xasm* ./build/xlang*
+	rm -rf ./build/xasm* ./build/xlang* ./build/objdump*
