[BugFix] Fixed bugs on Makefile

--- a/railgun/Makefile.WinPlatform
+++ b/railgun/Makefile.WinPlatform
@@ -11,7 +11,7 @@ __xmvefdump: xmvefdump/objdump.cpp xasm/include/*
 	$(CXX) xmvefdump/objdump.cpp $(CXXFLAG) -o xmvefdump/objdump
 
 __xtimevm: xtimevm/tests/xtime_test.cpp xtimevm/include/*
-	$(CXX) xtimevm/test/xtime_test.cpp $(CXXFLAG) -o xtimevm/xtimevm
+	$(CXX) xtimevm/tests/xtime_test.cpp $(CXXFLAG) -o xtimevm/xtimevm
 
 install: clean __xasm __xlang __xmvefdump __xtimevm
 	mv xasm/tests/xasm.exe build/
