--- a/railgun/Makefile.WinPlatform
+++ b/railgun/Makefile.WinPlatform
@@ -13,11 +13,16 @@ __xmvefdump: xmvefdump/objdump.cpp xasm/include/*
 __xtimevm: xtimevm/tests/xtime_test.cpp xtimevm/include/*
 	$(CXX) xtimevm/tests/xtime_test.cpp $(CXXFLAG) -o xtimevm/xtimevm
 
+refresh: refresh_version
+	./refresh_version.exe fast
+
 install: clean __xasm __xlang __xmvefdump __xtimevm
 	mv xasm/tests/xasm.exe build/
 	mv tests/xlang.exe build/
 	mv xmvefdump/objdump.exe build/
 	mv xtimevm/xtimevm.exe build/
 
+quick: refresh install
+
 clean: 
-	rm -rf ./build/xasm* ./build/xlang* ./build/objdump* ./build/xtime*
+	rm -rf ./build/xasm* ./build/xlang* ./build/objdump* ./build/xtime* ./refresh_version.exe
