--- a/railgun/Makefile.DarwinPlatform
+++ b/railgun/Makefile.DarwinPlatform
@@ -26,6 +26,9 @@ __XtimeVM: xtimevm/tests/xtime_test.cpp xtimevm/include/*
 refresh: refresh_version
 	./refresh_version fast
 
+devices: 
+	make -f Devices.Makefile install
+
 install: clean __Xasm __Xlang __Xmvefdump __XtimeVM
 	mv xasm/tests/xasm build/
 	mv tests/xlang build/
@@ -35,4 +38,5 @@ install: clean __Xasm __Xlang __Xmvefdump __XtimeVM
 quick: refresh install
 
 clean: 
+	make -f Devices.Makefile clean
 	rm -rf ./build/xasm* ./build/xlang* ./build/objdump* ./build/xtime* ./refresh_version
